2008-01-08  Emmanuele Bassi  <ebassi@openedhand.com>

	* MANIFEST: Add the new custom actor example

	* examples/custom-actor.pl: Custom actor example; show how to
	subclass Clutter::Actor and override key methods. Requires
	the OpenGL module installed.

	* xs/ClutterActor.xs: Fix a lot of bugs in the overridable
	virtual functions; unfortunately, the ActorBox passed to
	QUERY_COORDS() is an in-out parameter, so we need it on the
	stack as well. subclasses will receive the box on the stack
	and will have to return an array of coordinates (x1, y1, x2, y2)
	with the new bounding box. Actors don't usually need the box
	on the stack and can just ignore it, though.

	* t/ClutterActor.t: There's no point in chaining up QUERY_COORDS;
	make sure we get the right box size in subclasses; chain up
	REQUEST_COORDS, which is instead needed.

2008-01-08  Emmanuele Bassi  <ebassi@openedhand.com>

	* xs/ClutterActor.xs: Allow overriding the PICK virtual function.

2008-01-08  Emmanuele Bassi  <ebassi@openedhand.com>

	* MANIFEST:
	* maps:
	* xs_files: Add xs/ClutterShader.xs and its types.

	* xs/ClutterActor.xs: Bind Clutter::Actor shaders API.

	* xs/ClutterShader.xs: Bind Clutter::Shader, the OpenGL
	programmable pipeline abstraction.

2008-01-08  Emmanuele Bassi  <ebassi@openedhand.com>

	* xs/ClutterModel.xs: Bind:

	  clutter_model_set_sort()
	  clutter_model_set_filter()

	and start providing basic functionality for subclassing
	Clutter::Model with a pure-perl implementation.

2008-01-07  Emmanuele Bassi  <ebassi@openedhand.com>

	* examples/script.pl: Fix the timeline to be used by the
	behaviours, and quit when the score terminates.

	* xs/ClutterModel.xs: Use the vector based API for appending
	and prepending rows to the model.

	* t/ClutterModel.t: Fix the Clutter::Model API test

2008-01-07  Emmanuele Bassi  <ebassi@openedhand.com>

	* Makefile.PL: Require unstable GLib, for gperl_sv_defined()

2008-01-07  Emmanuele Bassi  <ebassi@openedhand.com>
